style.css
* {
    font-family: 'Lato', Arial, Helvetica, sans-serif;
    --form-elem-outline: #dddddd;
    --form-elem-accent: #444444;
    --form-elem-padding: 0.5em;
    --form-elem-transition: 0.2s;
    --form-elem-br: 0.25em;
    --form-elem-margin: 1em;
    --form-elem-text-color: #444444;
}

body {
    min-height: 100vh;
    min-width: 100vw;
    box-sizing: border-box;
    margin: 0;
    background: #f3f3f3;
    position: relative;
}

a {
    color: #444444;
    transition-duration: 0.2s;
}

/* visited link */
a:visited {
    color: #444444;
}

/* mouse over link */
a:hover {
    color: #007cdf;
}

/* selected link */
a:active {
    color: #0085f1;
}

button:hover {
    border: 2px solid var(--form-elem-accent);
    cursor: pointer;
}

button:active {
    outline: none;
    background: white;
}

button:focus {
    border: 2px solid var(--form-elem-accent);
}

.v-flex-centered {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.input-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 70%;
}

.text {
    padding-left: 1em;
    padding-right: 1em;
    max-width: 80ch;
    margin: 0.4em;
}


.select-wrapper select {
    background: #eeeeee;
    appearance: none;
    border-radius: var(--form-elem-br);
    border: 2px solid var(--form-elem-outline);
    cursor: pointer;
    padding: var(--form-elem-padding);
    padding-right: 1.5em;
    /* make space for the custom dropdown arrow */
    transition-duration: var(--form-elem-transition);

}

.select-wrapper select:hover {
    border: 2px solid var(--form-elem-accent);
}

.select-wrapper select:focus {
    border: 2px solid var(--form-elem-accent);
    background: white;
    outline: none;
}

.select-wrapper {
    padding: var(--form-elem-padding);
    display: flex;
    align-items: center;
    min-width: fit-content;
    margin: var(form-elem-margin);
}

.select-wrapper::after {
    content: "\25bc";
    pointer-events: none;
    color: var(--form-elem-accent);
    margin-left: -1.5em;
    background: transparent;
}

#mask {
    display: none;
    flex-direction: column;
    width: 100vw;
    height: 100vh;
    z-index: 10000;
    background: rgba(0, 0, 0, .80);
    position: absolute;
    top: 0;
    left: 0;
    box-sizing: border-box;
    overflow: hidden;
}

#alert {
    width: 35%;
    min-height: 40%;
    background: white;
    border-radius: 1em;
    flex-direction: column;
    padding-bottom: 1em;
    font-size: 1.2em;
}

#alert-header,
#alert-footer {
    width: 90%;
    height: 10%;
}

#alert-header {
    padding: 1.4em;
    padding-left: 2em;
    text-align: left;
    font-size: 1.2em;
    font-weight: bold;
}

#alert-body {
    width: 90%;
    height: 80%;
    text-align: left;
    padding-left: 2em;
    padding-right: 1.3em;
}

#alert-footer {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-bottom: 0.5em;
    margin-top: 1em;
    margin-right: 0;
}

#credits {
    bottom: 0;
    left: 0;
    width: 100%;
    text-align: center;
    margin-bottom: 1em;
    overflow-wrap: break-word;
}

#form {
    padding-top: 2em;
    padding-bottom: 2em;
    padding-left: 1em;
    padding-right: 1em;
    min-width: 45vw;
    min-height: 45vh;
    background: #fafafa;
    border-radius: 1em;
    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
    margin: 1em;
}

#form-heading {
    font-size: 2em;
    margin: 0.5em;
    text-align: center;
}


#form input[type='text'],
button {
    background: #eeeeee;
    margin: var(--form-elem-margin);
    margin-right: 0;
    padding: var(--form-elem-padding);
    border-radius: var(--form-elem-br);
    border: 2px solid var(--form-elem-outline);
    transition-duration: var(--form-elem-transition);
}

#form input[type='text']:hover {
    border: 2px solid var(--form-elem-accent);
}

#form input[type='text']:focus {

    background: white;
    border: 2px solid var(--form-elem-accent);
    outline: none;
}

#button-wrapper {
    justify-content: center;
    display: flex;
    width: 40%;
}

#audio {
    display: none;
}

#button-wrapper>.input-wrapper {
    justify-content: center;
}

#ideas {
    display: flex;
}

#message {
    min-width: 60%;
}

@media only screen and (max-aspect-ratio: 5/3) {
    #form {
        min-width: 50vw;
        min-height: 50vh;
    }

    #alert {
        width: 45%;
    }
}

@media only screen and (max-aspect-ratio: 9/14) {
    .input-wrapper {
        width: 80%;
    }

    #button-wrapper {
        width: 60%;
    }

    #alert {
        width: 60%;
    }
}

@media only screen and (max-aspect-ratio: 9/16) {
    #form {
        padding: auto;
        margin: auto;
        min-width: 0;
        width: auto;
    }

    .input-wrapper {
        width: 90%;
        flex-direction: column;
    }

    #alert {
        width: 80%;
        height: auto;
    }

    #credits {
        width: 90%;
    }
}

